Use --system option to jdeps if --javaHome option is used to point to a different JDK. Misc cleanup.